<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.uatizapi.cursoandroid.cassino.Activitys.RegrasActivity"
    android:background="@drawable/fundoclaro1_dark"
    tools:mockup_opacity="80"
    android:padding="15dp">

    <Button
        android:id="@+id/bt_voltarR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shapebutton"
        android:text="@string/sair"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regras_do_jogo"
        android:padding="15dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/titulo_regras"

        android:textColor="@color/colorAccent"/>

    <ScrollView
        android:id="@+id/sv_Regras"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_titulo"
        android:layout_above="@+id/bt_voltarR"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_regras"
            android:textColor="@color/texto_regras"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="inherit"/>
        </ScrollView>

</RelativeLayout>
