<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundoclaro1_dark"
    tools:context="br.com.uatizapi.cursoandroid.cassino.Activitys.GameActivity">

    <LinearLayout
        android:id="@+id/layout_imagens"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamanho_maquina"
        android:layout_marginTop="70dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/caca_niqueis_editado"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/image1"
            android:layout_width="@dimen/largura_imagem"
            android:layout_height="match_parent"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="@dimen/margens_imagem"
            android:layout_marginBottom="@dimen/margens_imagem"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="@dimen/largura_imagem"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margem_fileira"
            android:layout_marginTop="@dimen/margens_imagem"
            android:layout_marginBottom="@dimen/margens_imagem"/>

        <ImageView
            android:id="@+id/image3"
            android:layout_width="@dimen/largura_imagem"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margem_fileira"
            android:layout_marginTop="@dimen/margens_imagem"
            android:layout_marginBottom="@dimen/margens_imagem"/>


    </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/creditos"
            android:textColor="@color/colorSecondary_text"
            android:textSize="@dimen/labels_informativos"
            android:layout_below="@+id/layout_imagens"
            android:layout_alignLeft="@+id/layout_imagens"
            android:layout_alignStart="@+id/layout_imagens" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pontuacao"
            android:textColor="@color/colorSecondary_text"
            android:textSize="@dimen/labels_informativos"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignRight="@+id/layout_imagens"
            android:layout_alignEnd="@+id/layout_imagens" />

        <TextView
            android:id="@+id/txt_creditos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/pontuacoes"
            android:layout_below="@+id/textView"
            android:textColor="@color/colorSecondary_text" />

        <TextView
            android:id="@+id/txt_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/pontuacoes"
            android:textColor="@color/colorSecondary_text"/>

        <Button
            android:id="@+id/btn_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:background="@drawable/shapebutton_go"
            android:layout_alignBaseline="@+id/bt_sortear"
            android:layout_alignBottom="@+id/bt_sortear"
            android:layout_alignLeft="@+id/layout_imagens"
            android:layout_alignStart="@+id/layout_imagens" />

        <Button
            android:id="@+id/bt_novamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogar_novamente"
            android:layout_below="@+id/txt_pontos"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shapebutton"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/bt_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shapebutton"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/challenger"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bt_sortear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="Sortear"
        android:background="@drawable/shapebutton_sortear"
        android:layout_above="@+id/bt_voltar"
        android:layout_alignRight="@+id/layout_imagens"
        android:layout_alignEnd="@+id/layout_imagens" />

</RelativeLayout>
